fixing up nav toggle visibility

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -269,6 +269,7 @@ Navigation
   top: 48px;
   visibility: hidden;
   transition: all 300ms ease-in-out;
+  background-color: #000;
 }
 
 /* ==========================================================================
@@ -379,6 +380,7 @@ header {
   }
   .header-nav {
     display: inline-block;
+    background-color: #e8f8f2;
   }
   .member-actions {
     position: absolute;
